# ifxmt5ai

./: .env.example  .gitignore  Dockerfile.control_plane  Dockerfile.relay_agent  ENTERPRISE_ARCHITECTURE.md  ENTERPRISE_MULTITENANT_ARCHITECTURE.md  ENTERPRISE_REDESIGN_PLAN.md  FX_Simple_1m_Bridge_Railway.mq5  IFX_ControlPlane_Bridge_v1.ex5  IFX_ControlPlane_Bridge_v1.mq5  IFX_PriceBridge_v3.mq5  IFX_Railway_Bridge_v1.ex5  IFX_Railway_Bridge_v1.mq5  IFX_Scratch_Flow_v1.ex5  IFX_Scratch_Flow_v1.mq5  IFX_Scratch_Probe_v1.ex5  IFX_Scratch_Probe_v1.mq5  KAFKA_ALTERNATIVES.md  NEw EA.txt  STALE_CONNECTIONS_FIX.md  STARTUP.md  _arm_trade_ascii.py  _check_account_status.py  _check_arm_result.py  _check_arm_trade.py  _check_signing.py  _check_status.py  _debug_json_parse.py  _debug_terminal.js  _fetch_commands.py  _find_testuser.py  _fix_arm_trade_notes.py  _playwright_entry_debug.js  _playwright_history_check.js  _playwright_prod_history_check.js  _playwright_prod_setup_check.js  _probe_timestamps.py  _reset_test_user.py  _run_arm_trade.py  _setup_user3.py  (+63 more)
docs/: task.md  (+31 more)
newbog/newbog/: DEVELOPER_GUIDE.md  README.md  calendar_cache.db  compare_calendars.py  focused_final.py  focused_summary.py  pyproject.toml  pyrightconfig.json  summary_output.txt  summary_report.py  test_calendar.py
newbog/newbog/src/economic_calendar/: __init__.py  cache.py  engine.py  models.py  schema.py
newbog/newbog/src/economic_calendar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
newbog/newbog/tests/: test_blocking.py  test_engine.py  test_fred_provider.py  test_impact.py
(+176 files in other folders)
