[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "economic-calendar"
version = "0.1.0"
description = "Portable economic calendar engine with FRED-first official source adapters"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GitHub Copilot" }
]
dependencies = []

[project.scripts]
economic-calendar = "economic_calendar.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
